# project-sentiment-analysis-dicoding

./: README.md  build_notebook.py  dataset.csv  gojek_reviews_raw.csv  notebook.ipynb  pyproject.toml  requirements.txt  scraping.ipynb  scraping.py
data/: gojek_reviews_raw.csv
models/: label_mapping.json  logreg_model.joblib  svm_model.joblib  tfidf_logreg.joblib  tfidf_svm.joblib  vocab.json
